--- a/app/src/main/res/layout/list_item_movie_row.xml
+++ b/app/src/main/res/layout/list_item_movie_row.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="70dp"
         android:textColor="#000000"
-        android:id="@+id/thumbnail"
+        android:id="@+id/poster"
         android:text="image"
         android:height="20sp"
         android:layout_gravity="center"
@@ -33,8 +33,8 @@
         android:layout_row="1"
         android:layout_column="1"
         android:layout_rowSpan="2"
-        android:layout_toRightOf="@+id/thumbnail"
-        android:layout_toEndOf="@+id/thumbnail"
+        android:layout_toRightOf="@+id/poster"
+        android:layout_toEndOf="@+id/poster"
         android:maxLines="4"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
