added "pull to refresh" action in MainActivity
wrapped ListView in SwipeRefreshLayout
setup the SwipeRefreshLayout onRefreshListener to refresh the data

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ngo.patrick.movielistings.MainActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ListView
         android:id="@+id/listview_movielist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="2dp" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
